<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LBDApp</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Ok!</string>
    <string name="textocompra">Tu cesta de la compra se ha enviado a tienda </string>
    <string name="eliminaruser">¿Estás seguro que quieres eliminar tu cuenta? Se eliminará tus datos.</string>
    <string name="listadelacompra">"Lista de cesta de la compra"</string>
    <string name="intro1">"Introduce el dato a actualizar"</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciarsesion">Iniciar Sesion</string>
    <string name="recordarusuario">Recordar Usuario</string>
    <string name="Registrarse">"Registrarse"</string>
    <string name="comprarlogin">"Comprar sin registrarse"</string>
    <string name="carro1">"Escoge el día para recoger tu compra:"</string>
    <string name="comprarcarro">"COMPRAR"</string>
    <string name="cesta">"CESTA DE LA COMPRA "</string>
    <string name="compartir">"Compartir"</string>
    <string name="ver">Ver</string>
    <string name="fech">"Fecha elegida:"</string>
    <string name="vacio"> </string>
    <string name="RECORDATORIO">RECORDATORIO</string>
    <string name="CONTACTO">"CONTACTO"</string>
    <string name="TELÉFONO">TELÉFONO:</string>
    <string name="TELCONTACTO">671898278</string>
    <string name="LLAMAR">"LLAMAR "</string>
    <string name="DIRECCIÓN">DIRECCIÓN</string>
    <string name="direccion">"Alameda de Urquijo 45"</string>
    <string name="politica">"POLÍTICA DE PRIVACIDAD "</string>
    <string name="verpolitica">"Ver politica"</string>
    <string name="datospersonales">DATOS PERSONALES </string>
    <string name="nombre">"Nombre"</string>
    <string name="correoelec">"Correo electrónico"</string>
    <string name="contra">Contraseña</string>
    <string name="tel">Teléfono</string>
    <string name="dir">Direccion</string>
    <string name="guardar">GUARDAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="micuenta">MI CUENTA </string>
    <string name="ACT1">ACTUALIZAR NOMBRE</string>
    <string name="ACTDIR">ACTUALIZAR DIRECCIÓN</string>
    <string name="ACTCONTRA">ACTUALIZAR CONTRASEÑA</string>
    <string name="ACTEL">ACTUALIZAR TELEFONO</string>
    <string name="COMPDATOS">COMPARTIR DATOS</string>
    <string name="CERRARSESION">CERRAR SESIÓN</string>
    <string name="elimcuenta">Eliminar cuenta</string>
    <string name="descrip1">"Romper ideal para el verano"</string>
    <string name="descrip2">"Romper ideal para el verano"</string>
    <string name="descrip3">"Pantalones en tela a puntos ideal para el verano"</string>
    <string name="descrip4">"Pantalones en tela de rayas azules "</string>
    <string name="descrip5">"Vestido en tela vaquera azul con botones ideal para el verano"</string>
    <string name="descrip6">"Romper negro ideal para el verano"</string>
    <string name="descrip7">"Vestido floral ideal para el verano"</string>
    <string name="descrip8">"Vestido elegante blanco ideal para el verano"</string>
    <string name="descrip9">"Vaqueros ideal para el verano"</string>
    <string name="descrip10">"Peto amarillo ideal para el verano"</string>
    <string name="nombre1">"Romper rayas"</string>
    <string name="nombre2">"Romper Azul cielo"</string>
    <string name="nombre3">"Pantalones punto"</string>
    <string name="nombre4">"Pantalones rayas"</string>
    <string name="nombre5">"Vestido vaquero"</string>
    <string name="nombre6">"Romper Black top"</string>
    <string name="nombre7">"Vestido Sunnyflowers"</string>
    <string name="nombre8">"Vestido NocheBlanca"</string>
    <string name="nombre9">"Vaqueros Summer"</string>
    <string name="nombre10">"Peto Yellow Top"</string>
    <string name="idioma">cambiar idioma</string>
    <string name="añadir">añadir</string>
    <string name="tienes">"Tienes que recoger tu compra!"</string>
    <string name="felec"> "La fecha elegida es:"</string>
    <string name="editinfous">"Editar información de usuario"</string>
    <string name="electalla">"Elegir Talla"</string>
    <string name="emailnovalido">"el email no es valido, intenta de nuevo"</string>
    <string name="contranovalida">"La contraseña no es válida, intenta de nuevo"</string>
    <string name="usernotregister">"el usuario no esta registrado, registrate para poder iniciar sesión"</string>
    <string name="lista">Lista</string>
    <string name="canal">LBDapp Canal </string>
    <string name="infousuario">Información de usuario </string>
    <string name="mislooks"> Mi Guardarropa </string>
    <string name="direcciontienda"> Av Urquijo 44 Bilbao </string>
    <string name="verenmaps"> ver en maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>