<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"  android:layout_height="match_parent"
    android:background="@drawable/fondo">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="418dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".contacto">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CONTACTO"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="164dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TELÉFONO"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TELCONTACTO" />

        <Button
            android:id="@+id/btnllamar"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/LLAMAR" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DIRECCIÓN" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/politica"
            android:textColor="@android:color/black"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:backgroundTint="@color/colorPrimary"
            android:text="@string/verpolitica" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
</ScrollView>