<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.erika.lbdapp.Usuario"
    android:layout_width="match_parent"  android:layout_height="match_parent"
    android:background="@drawable/fondo">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.erika.lbdapp.Usuario">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/micuenta"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
                android:textColor="@android:color/black"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correoelec"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textemail"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/vacio" />


            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textnombre"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/vacio" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/texttelefono"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/vacio"/>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/colorPrimary"
                android:text="@string/dir"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textdirec"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:backgroundTint="@color/colorPrimary"
                android:text="@string/vacio" />

            <Button
                android:id="@+id/mislooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/mislooks"
                app:backgroundTint="@color/colorPrimary" />

            <Button
                android:id="@+id/actnombre"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/ACT1"
                app:backgroundTint="@color/colorPrimary" />

            <Button
                android:id="@+id/actpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/ACTCONTRA"
                app:backgroundTint="@color/colorPrimary" />

            <Button
                android:id="@+id/actdirec"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/ACTDIR"
                app:backgroundTint="@color/colorPrimary" />

            <Button
                android:id="@+id/acttel"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/ACTEL"
                app:backgroundTint="@color/colorPrimary" />

            <Button
                android:id="@+id/btnlogout"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/CERRARSESION"
                app:backgroundTint="@color/colorPrimary" />

            <Button
                android:id="@+id/btnvolver"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/COMPDATOS"
                app:backgroundTint="@color/colorPrimary" />

            <Button
                android:id="@+id/btneliminar"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/elimcuenta"
                app:backgroundTint="@color/colorPrimary" />


        </LinearLayout>



</android.support.constraint.ConstraintLayout>
   </ScrollView>