<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragments.ContactFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".Contacto">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CONTACTO"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="164dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DIRECCIÓN"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direcciontienda" />

        <Button
            android:id="@+id/btnllamar"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verenmaps"
            app:backgroundTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DIRECCIÓN" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/politica"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verpolitica"
            app:backgroundTint="@color/colorPrimary" />

    </LinearLayout>

</FrameLayout>