<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Carrodelacompra">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="33dp"
            android:text="@string/carro1"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button7"
            android:layout_width="99dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/comprarcarro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview1"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/Label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cesta"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            android:textSize="24sp"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/compartir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview1"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/ver"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview1"
            android:layout_width="395dp"
            android:layout_height="342dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView7"
            app:layout_constraintVertical_bias="0.293" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="169dp"
            android:layout_height="36dp"
            android:layout_marginTop="32dp"
            android:text="@string/fech"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label" />

        <TextView
            android:id="@+id/fechaeleg"
            android:layout_width="123dp"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="8dp"
            android:text="@string/vacio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>